--- a/src/pages/Home/HomePage.style.scss
+++ b/src/pages/Home/HomePage.style.scss
@@ -7,9 +7,29 @@
     background-color: map-get($colors, "governorBay");
   }
 
+  .selection {
+    &__city-areas-wrapper {
+      position: relative;
+    }
+  }
+
   .content {
     padding: 1rem 1.6rem;
     background-color: map-get($colors, "alabaster");
+
+    .icon {
+      position: absolute;
+      display: inline-block;
+      top: 50%;
+      right: 1rem;
+      width: 1.5rem;
+      height: 1.5rem;
+      padding: 0.5rem;
+      border: 1px solid map-get($colors, "nevada");
+      border-radius: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+    }
   }
 
   .find-button {
