style journey card info messages

--- a/src/pages/JourneyList/JourneyListPage.style.scss
+++ b/src/pages/JourneyList/JourneyListPage.style.scss
@@ -38,4 +38,10 @@
       cursor: pointer;
     }
   }
+
+  .info-message{
+    font-size: 1.6rem;
+    margin-top: 1rem;
+    color: map-get($colors, "nevada");
+  }
 }
