--- a/src/components/JourneyCard/JourneyCard.style.scss
+++ b/src/components/JourneyCard/JourneyCard.style.scss
@@ -2,7 +2,7 @@
 
 .journey-card {
   width: calc(100% - 1.6rem);
-  padding: 6px 0 11px;
+  padding: .6rem 0 1.1rem;
   margin: auto;
   background: linear-gradient(
     261deg,
@@ -10,8 +10,8 @@
     rgba(255, 255, 255, 1) 57%,
     rgba(237, 237, 237, 1) 100%
   );
-  border: 0.5px solid map-get($colors, "nobel");
-  border-radius: 3px;
+  border: 0.05rem solid map-get($colors, "nobel");
+  border-radius: .3rem;
   margin-top: 1.1rem;
 
   &__header {
@@ -56,7 +56,7 @@
   }
 
   .route {
-    margin-top: 0.7px;
+    margin-top: 0.7rem;
     font-size: 1.2rem;
     line-height: 1.7rem;
   }
