--- a/src/components/Skeleton/Skeleton.style.scss
+++ b/src/components/Skeleton/Skeleton.style.scss
@@ -3,7 +3,7 @@
 .skeleton {
   position: relative;
   width: calc(100% - 1.6rem);
-  padding: 6px 0 11px;
+  padding: .6rem 0 1.1rem;
   margin: auto;
   background: linear-gradient(
     261deg,
@@ -11,8 +11,8 @@
     rgba(255, 255, 255, 1) 57%,
     rgba(237, 237, 237, 1) 100%
   );
-  border: 0.5px solid map-get($colors, "nobel");
-  border-radius: 3px;
+  border: 0.05rem solid map-get($colors, "nobel");
+  border-radius: .3rem;
   margin-top: 1.1rem;
 
   .line {
@@ -58,15 +58,15 @@
       rgb(219, 216, 216) 18%,
       rgb(212, 203, 203) 33%
     );
-    background-size: 800px 104px;
+    background-size: 80rem 10.4rem;
   }
 
   @keyframes placeholder {
     0% {
-      background-position: -468px 0;
+      background-position: -46.8rem 0;
     }
     100% {
-      background-position: 350px 0;
+      background-position: 35rem 0;
     }
   }
 }
