--- a/src/pages/Home/HomePage.style.scss
+++ b/src/pages/Home/HomePage.style.scss
@@ -25,7 +25,7 @@
       width: 1.5rem;
       height: 1.5rem;
       padding: 0.5rem;
-      border: 1px solid map-get($colors, "nevada");
+      border: 0.1rem solid map-get($colors, "nevada");
       border-radius: 50%;
       transform: translateY(-50%);
       cursor: pointer;
