--- a/src/components/Skeleton/Skeleton.style.scss
+++ b/src/components/Skeleton/Skeleton.style.scss
@@ -3,7 +3,7 @@
 .skeleton {
   position: relative;
   width: calc(100% - 1.6rem);
-  padding: .6rem 0 1.1rem;
+  padding: 0.6rem 0 1.1rem;
   margin: auto;
   background: linear-gradient(
     261deg,
@@ -12,7 +12,7 @@
     rgba(237, 237, 237, 1) 100%
   );
   border: 0.05rem solid map-get($colors, "nobel");
-  border-radius: .3rem;
+  border-radius: 0.3rem;
   margin-top: 1.1rem;
 
   .line {
@@ -21,6 +21,7 @@
     background: map-get($colors, "nobel");
     margin-left: 2rem;
     margin-bottom: 0.5rem;
+    border-radius: 0.5rem;
     @extend %skeleton__animation;
 
     &--1,
