--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "./CommonCSS/variables.scss";
+@import "./CommonCSS/reset";
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
 
 body {
